彩票 修复AddFlagRule上Java版本问题(XSP-1235, XSP-1233)