@@ -11,6 +11,7 @@ import org.jeasy.rules.api.Facts;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Rule(name = "Add Extra Flag", description = "添加额外标记")
 public class AddFlagRule {
@@ -33,7 +34,7 @@ public class AddFlagRule {
             List<String> flags = ruleSuite.stream()
                     .filter(item -> item.matches("^add-flag-.*$"))
                     .map(item -> item.split("add-flag-")[1])
-                    .toList();
+                    .collect(Collectors.toList());
 
             Map<String, List<String>> attached;
 
